chore(ejs): render project template

--- a/packages/wujie-cli/template/examples/main-vue/src/App.ejs
+++ b/packages/wujie-cli/template/examples/main-vue/src/App.ejs
@@ -3,13 +3,10 @@
     <div id="nav" :class="active ? 'active' : ''" @click="close">
       <router-link to="/home">介绍</router-link>
       <!-- react16相关路由 -->
+      <% if (subFramework.includes('react16')) { -%>
       <router-link to="/react16">
         react16
-        <!-- <a-icon
-          :class="['main-icon', { active: react16Flag }]"
-          type="caret-up"
-          @click.native="handleFlag('react16')"
-        /> -->
+        <a-icon :class="['main-icon', { active: react16Flag }]" type="caret-up" @click.native="handleFlag('react16')" />
       </router-link>
       <div class="sub-menu" v-show="react16Flag">
         <router-link to="/react16-sub/home">home</router-link>
@@ -19,15 +16,13 @@
         <router-link to="/react16-sub/nest">nest</router-link>
         <router-link to="/react16-sub/font">font</router-link>
       </div>
+      <% } -%>
+      <% if (subFramework.includes('react17')) { -%>
       <!-- react17相关路由 -->
       <router-link to="/react17">
         react17
         <span class="alive">保活</span>
-        <!-- <a-icon
-          :class="['main-icon', { active: react17Flag }]"
-          type="caret-up"
-          @click.native="handleFlag('react17')"
-        /> -->
+        <a-icon :class="['main-icon', { active: react17Flag }]" type="caret-up" @click.native="handleFlag('react17')" />
       </router-link>
       <div class="sub-menu" v-show="react17Flag">
         <router-link to="/react17-sub/home">home</router-link>
@@ -36,30 +31,26 @@
         <router-link to="/react17-sub/communication">communication</router-link>
         <router-link to="/react17-sub/state">state</router-link>
       </div>
+      <% } -%>
+      <% if (subFramework.includes('vue2')) { -%>
       <!-- vue2相关路由 -->
       <router-link to="/vue2">
         vue2
-        <!-- <a-icon
-          :class="['main-icon', { active: vue2Flag }]"
-          type="caret-up"
-          @click.native="handleFlag('vue2')"
-        /> -->
+        <a-icon :class="['main-icon', { active: vue2Flag }]" type="caret-up" @click.native="handleFlag('vue2')" />
       </router-link>
       <div class="sub-menu" v-show="vue2Flag">
-        <router-link to="/vue2/home">home</router-link>
-        <router-link to="/vue2/dialog">dialog</router-link>
-        <router-link to="/vue2/location">location</router-link>
-        <router-link to="/vue2/communication">communication</router-link>
+        <router-link to="/vue2-sub/home">home</router-link>
+        <router-link to="/vue2-sub/dialog">dialog</router-link>
+        <router-link to="/vue2-sub/location">location</router-link>
+        <router-link to="/vue2-sub/communication">communication</router-link>
       </div>
+      <% } -%>
+      <% if (subFramework.includes('vue3')) { -%>
       <!-- vue3相关路由 -->
       <router-link to="/vue3">
         vue3
         <span class="alive">保活</span>
-        <!-- <a-icon
-          :class="['main-icon', { active: vue3Flag }]"
-          type="caret-up"
-          @click.native="handleFlag('vue3')"
-        /> -->
+        <a-icon :class="['main-icon', { active: vue3Flag }]" type="caret-up" @click.native="handleFlag('vue3')" />
       </router-link>
       <div class="sub-menu" v-show="vue3Flag">
         <router-link to="/vue3-sub/home">home</router-link>
@@ -68,33 +59,26 @@
         <router-link to="/vue3-sub/contact">contact</router-link>
         <router-link to="/vue3-sub/state">state</router-link>
       </div>
+      <% } -%>
+      <% if (subFramework.includes('vite')) { -%>
       <router-link to="/vite"
-        >vite
-        <!-- <a-icon
-          :class="['main-icon', { active: viteFlag }]"
-          type="caret-up"
-          @click.native="handleFlag('vite')"
-        /> -->
-      </router-link>
+        >vite <a-icon :class="['main-icon', { active: viteFlag }]" type="caret-up" @click.native="handleFlag('vite')"
+      /></router-link>
       <div class="sub-menu" v-show="viteFlag">
         <router-link to="/vite-sub/home">home</router-link>
         <router-link to="/vite-sub/dialog">dialog</router-link>
         <router-link to="/vite-sub/location">location</router-link>
         <router-link to="/vite-sub/contact">contact</router-link>
       </div>
+      <% } -%>
+      <% if (subFramework.includes('angular12')) { -%>
       <router-link to="/angular12">angular12</router-link>
+      <% } -%>
       <router-link to="/all">all</router-link>
-      <!-- <a-button
-        class="menu-icon"
-        type="primary"
-        icon="unordered-list"
-        size="large"
-        @click.stop="active = !active"
-      /> -->
+      <a-button class="menu-icon" type="primary" icon="unordered-list" size="large" @click.stop="active = !active" />
     </div>
     <div class="content" @click="active = false">
-      <!-- 必须添加key否则路由共用组件不会渲染 -->
-      <router-view :key="$route.path" />
+      <router-view />
     </div>
   </div>
 </template>
@@ -138,10 +122,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: #2c3e50;
   display: flex;
-  flex: 1;
-  justify-content: center;
   flex-direction: row;
   flex-wrap: nowrap;
+  width: 100vw;
 }
 
 #nav {
@@ -215,11 +198,10 @@ h3 {
 }
 
 .content {
-  margin: 0 auto;
-  /* flex: 1;
+  flex: 1;
   height: 100vh;
   overflow: hidden scroll;
-  width: 1px; */
+  width: 1px;
 }
 
 #nav a {
