--- a/packages/wujie-cli/template/examples/main-vue/src/main.ejs
+++ b/packages/wujie-cli/template/examples/main-vue/src/main.ejs
@@ -2,8 +2,8 @@ import Vue from "vue";
 import App from "./App.vue";
 import router from "./router";
 import WujieVue from "wujie-vue2";
-import hostMap from "./hostMap";
-import credentialsFetch from "./fetch";
+import hostMap from "../wujie-config/hostMap";
+import credentialsFetch from "../wujie-config/fetch";
 import Switch from "ant-design-vue/es/switch";
 import Tooltip from "ant-design-vue/es/tooltip";
 import button from "ant-design-vue/es/button/index";
@@ -13,8 +13,8 @@ import "ant-design-vue/es/style/index.css";
 import "ant-design-vue/es/switch/style/index.css";
 import "ant-design-vue/es/tooltip/style/index.css";
 import "ant-design-vue/es/icon/style/index.css";
-import lifecycles from "./lifecycle";
-import plugins from "./plugin";
+import lifecycles from "../wujie-config/lifecycle";
+import plugins from "../wujie-config/plugin";
 
 const isProduction = process.env.NODE_ENV === "production";
 const { setupApp, preloadApp, bus } = WujieVue;
