--- a/packages/wujie-cli/template/examples/main-vue/src/router/index.ejs
+++ b/packages/wujie-cli/template/examples/main-vue/src/router/index.ejs
@@ -1,4 +1,5 @@
 import Vue from "vue";
+import VueRouter from 'vue-router'
 import Home from "../views/Home.vue";
 import Multiple from "../views/Multiple.vue";
 <% if (subFramework.includes('vue2')) { -%>
