chore(ejs): render

--- a/packages/wujie-cli/template/examples/main-vue/src/router/index.ejs
+++ b/packages/wujie-cli/template/examples/main-vue/src/router/index.ejs
@@ -117,9 +117,16 @@ const routes = [
 // 你可以在这里输入更多的配置，但我们在这里
 // 暂时保持简单
 const router = new VueRouter({
-  mode: "history",
+  <% if (mainRouter === 'hash') { -%>
+    mode: 'hash',
+  <% } -%>
+  <% if (mainRouter === 'history') { -%>
+    mode: 'history',
+  <% } -%>
   base: basename,
   routes,
 });
 
 export default router;
+
+
