--- a/packages/wujie-cli/template/examples/main-vite/src/router/index.ejs
+++ b/packages/wujie-cli/template/examples/main-vite/src/router/index.ejs
@@ -1,4 +1,9 @@
+<% if (mainRouter === 'hash') { -%>
 import { createRouter, createWebHashHistory } from "vue-router";
+<% } -%>
+<% if (mainRouter === 'history') { -%>
+import { createRouter, createWebHistory } from "vue-router";
+<% } -%>
 import Home from "../views/Home.vue";
 import Multiple from "../views/Multiple.vue";
 <% if (subFramework.includes('vue2')) { -%>
@@ -113,8 +118,13 @@ const routes = [
 // 你可以在这里输入更多的配置，但我们在这里
 // 暂时保持简单
 const router = createRouter({
-  // 4. 内部提供了 history 模式的实现。为了简单起见，我们在这里使用 hash 模式。
-  history: createWebHashHistory(),
+  <!-- // 4. 内部提供了 history 模式的实现。为了简单起见，我们在这里使用 hash 模式。 -->
+  <% if (mainRouter === 'hash') { -%>
+    history: createWebHashHistory(),
+  <% } -%>
+  <% if (mainRouter === 'history') { -%>
+    history: createWebHistory(),
+  <% } -%>
   routes, // `routes: routes` 的缩写
 });
 
