--- a/packages/wujie-cli/template/examples/main-vue/src/App.ejs
+++ b/packages/wujie-cli/template/examples/main-vue/src/App.ejs
@@ -2,8 +2,8 @@
   <div id="app">
     <div id="nav" :class="active ? 'active' : ''" @click="close">
       <router-link to="/home">介绍</router-link>
+      <% if (subFramework.includes('React16')) { -%>
       <!-- react16相关路由 -->
-      <% if (subFramework.includes('react16')) { -%>
       <router-link to="/react16">
         react16
         <a-icon :class="['main-icon', { active: react16Flag }]" type="caret-up" @click.native="handleFlag('react16')" />
@@ -17,7 +17,7 @@
         <router-link to="/react16-sub/font">font</router-link>
       </div>
       <% } -%>
-      <% if (subFramework.includes('react17')) { -%>
+      <% if (subFramework.includes('React17')) { -%>
       <!-- react17相关路由 -->
       <router-link to="/react17">
         react17
@@ -45,7 +45,7 @@
         <router-link to="/vue2-sub/communication">communication</router-link>
       </div>
       <% } -%>
-      <% if (subFramework.includes('vue3')) { -%>
+      <% if (subFramework.includes('Vue3')) { -%>
       <!-- vue3相关路由 -->
       <router-link to="/vue3">
         vue3
@@ -60,7 +60,7 @@
         <router-link to="/vue3-sub/state">state</router-link>
       </div>
       <% } -%>
-      <% if (subFramework.includes('vite')) { -%>
+      <% if (subFramework.includes('Vite')) { -%>
       <router-link to="/vite"
         >vite <a-icon :class="['main-icon', { active: viteFlag }]" type="caret-up" @click.native="handleFlag('vite')"
       /></router-link>
@@ -71,7 +71,7 @@
         <router-link to="/vite-sub/contact">contact</router-link>
       </div>
       <% } -%>
-      <% if (subFramework.includes('angular12')) { -%>
+      <% if (subFramework.includes('Angular12')) { -%>
       <router-link to="/angular12">angular12</router-link>
       <% } -%>
       <router-link to="/all">all</router-link>
