--- a/packages/wujie-cli/template/examples/vue2/src/main.ejs
+++ b/packages/wujie-cli/template/examples/vue2/src/main.ejs
@@ -1,6 +1,6 @@
 import Vue from "vue";
 import App from "./App.vue";
-import routes from "./router/index.ejs";
+import routes from "./router/index.js";
 import VueRouter from "vue-router";
 import Tag from "element-ui/lib/tag";
 import Button from "element-ui/lib/button";
