fix(template): render fix

--- a/packages/wujie-cli/template/examples/main-vue/src/App.ejs
+++ b/packages/wujie-cli/template/examples/main-vue/src/App.ejs
@@ -32,7 +32,7 @@
         <router-link to="/react17-sub/state">state</router-link>
       </div>
       <% } -%>
-      <% if (subFramework.includes('vue2')) { -%>
+      <% if (subFramework.includes('Vue2')) { -%>
       <!-- vue2相关路由 -->
       <router-link to="/vue2">
         vue2
