--- a/packages/wujie-cli/template/examples/main-vue/src/router/index.ejs
+++ b/packages/wujie-cli/template/examples/main-vue/src/router/index.ejs
@@ -2,27 +2,27 @@ import Vue from "vue";
 import VueRouter from 'vue-router'
 import Home from "../views/Home.vue";
 import Multiple from "../views/Multiple.vue";
-<% if (subFramework.includes('vue2')) { -%>
+<% if (subFramework.includes('Vue2')) { -%>
 import Vue2 from "../views/Vue2.vue";
 import Vue2Sub from "../views/Vue2-sub.vue";
 <% } -%>
-<% if (subFramework.includes('vue3')) { -%>
+<% if (subFramework.includes('Vue3')) { -%>
 import Vue3 from "../views/Vue3.vue";
 import Vue3Sub from "../views/Vue3-sub.vue";
 <% } -%>
-<% if (subFramework.includes('vite')) { -%>
+<% if (subFramework.includes('Vite')) { -%>
 import Vite from "../views/Vite.vue";
 import ViteSub from "../views/Vite-sub.vue";
 <% } -%>
-<% if (subFramework.includes('react16')) { -%>
+<% if (subFramework.includes('React16')) { -%>
 import React16 from "../views/React16.vue";
 import React16Sub from "../views/React16-sub.vue";
 <% } -%>
-<% if (subFramework.includes('react17')) { -%>
+<% if (subFramework.includes('React17')) { -%>
 import React17 from "../views/React17.vue";
 import React17Sub from "../views/React17-sub.vue";
 <% } -%>
-<% if (subFramework.includes('angular12')) { -%>
+<% if (subFramework.includes('Angular12')) { -%>
 import Angular12 from "../views/Angular12.vue";
 <% } -%>
 
@@ -44,7 +44,7 @@ const routes = [
     name: "home",
     component: Home,
   },
-  <% if (subFramework.includes('vue2')) { -%>
+  <% if (subFramework.includes('Vue2')) { -%>
     {
       path: "/vue2",
       name: "vue2",
@@ -56,7 +56,7 @@ const routes = [
       component: Vue2Sub,
     },
     <% } -%>
-    <% if (subFramework.includes('vue3')) { -%>
+    <% if (subFramework.includes('Vue3')) { -%>
     {
       path: "/vue3",
       name: "vue3",
@@ -68,7 +68,7 @@ const routes = [
       component: Vue3Sub,
     },
     <% } -%>
-    <% if (subFramework.includes('vite')) { -%>
+    <% if (subFramework.includes('Vite')) { -%>
     {
       path: "/vite",
       name: "vite",
@@ -80,7 +80,7 @@ const routes = [
       component: ViteSub,
     },
     <% } -%>
-    <% if (subFramework.includes('react16')) { -%>
+    <% if (subFramework.includes('React16')) { -%>
       {
         path: "/react16",
         name: "react16",
@@ -92,7 +92,7 @@ const routes = [
         component: React16Sub,
       },
     <% } -%>
-    <% if (subFramework.includes('react17')) { -%>
+    <% if (subFramework.includes('React17')) { -%>
       {
         path: "/react17",
         name: "react17",
@@ -104,7 +104,7 @@ const routes = [
         component: React17Sub,
       },
     <% } -%>
-    <% if (subFramework.includes('angular12')) { -%>
+    <% if (subFramework.includes('Angular12')) { -%>
       {
         path: "/angular12",
         name: "angular12",
