--- a/packages/wujie-cli/template/examples/main-vite/src/App.ejs
+++ b/packages/wujie-cli/template/examples/main-vite/src/App.ejs
@@ -64,7 +64,7 @@
       <router-link to="/vite"
         >vite
         <!-- <a-icon :class="['main-icon', { active: viteFlag }]" type="caret-up" @click.native="handleFlag('vite')" -->
-      /></router-link>
+      </router-link>
       <div class="sub-menu" v-show="viteFlag">
         <router-link to="/vite-sub/home">home</router-link>
         <router-link to="/vite-sub/dialog">dialog</router-link>
