--- a/packages/wujie-cli/template/examples/main-vite/src/App.ejs
+++ b/packages/wujie-cli/template/examples/main-vite/src/App.ejs
@@ -135,7 +135,9 @@ body {
   flex-shrink: 0;
   font-size: 20px;
   display: flex;
-  position: relative;
+  position: fixed;
+  left: 0;
+  top: 0;
   z-index: 1;
   flex-direction: column;
   padding: 30px 0;
