--- a/packages/wujie-cli/template/examples/main-vue/src/views/Multiple.ejs
+++ b/packages/wujie-cli/template/examples/main-vue/src/views/Multiple.ejs
@@ -2,17 +2,22 @@
   <div style="height: 100%; width: 100%">
     <% if (subFramework.includes('React16')) { -%>
     <WujieVue class="item" name="react16" :url="react16Url" :sync="true"></WujieVue>
-    <% } -%> <% if (subFramework.includes('React17')) { -%>
+    <% } -%>
+    <% if (subFramework.includes('React17')) { -%>
     <WujieVue class="item" name="react17" :url="react17Url" :sync="true"></WujieVue>
-    <% } -%> <% if (subFramework.includes('Vite')) { -%>
+    <% } -%>
+    <% if (subFramework.includes('Vite')) { -%>
     <WujieVue class="item" name="react16" :url="vite" :sync="true"></WujieVue>
-    <% } -%> <% if (subFramework.includes('Vue2')) { -%>
+    <% } -%>
+    <% if (subFramework.includes('Vue2')) { -%>
     <WujieVue class="item" name="react16" :url="vue2Url" :sync="true"></WujieVue>
-    <% } -%> <% if (subFramework.includes('Vue3')) { -%>
+    <% } -%>
+    <% if (subFramework.includes('Vue3')) { -%>
     <WujieVue class="item" name="react16" :url="vue3Url" :sync="true"></WujieVue>
-    <% } -%> <% if (subFramework.includes('Angular12')) { -%>
+    <% } -%>
+    <% if (subFramework.includes('Angular12')) { -%>
     <WujieVue class="item" name="react16" :url="angular12Url" :sync="true"></WujieVue>
-    <% } -%
+    <% } -%>
   </div>
 </template>
 
