chore(ejs): render ejs

--- a/packages/wujie-cli/template/examples/main-react/src/App.ejs
+++ b/packages/wujie-cli/template/examples/main-react/src/App.ejs
@@ -20,7 +20,7 @@ import Vite from "./pages/Vite";
 <% if (subFramework.includes('Angular12')) { -%>
 import Angular12 from "./pages/Angular12";
 <% } -%>
-import All from "./pages/All.ejs";
+import All from "./pages/All.js";
 import Button from "antd/es/button";
 import { UnorderedListOutlined, CaretUpOutlined } from "@ant-design/icons";
 
