--- a/packages/wujie-cli/template/examples/main-react/src/index.ejs
+++ b/packages/wujie-cli/template/examples/main-react/src/index.ejs
@@ -5,7 +5,7 @@ import "antd/es/switch/style/css.js";
 import "antd/es/tooltip/style/css.js";
 import "antd/es/button/style/css.js";
 import "./index.css";
-import App from "./App.ejs";
+import App from "./App.js";
 import reportWebVitals from "./reportWebVitals";
 import hostMap from "./hostMap";
 import credentialsFetch from "./fetch";
